[0.4.5]
- bookmark_shout mutation resolver added
- load_bookmarked_shouts resolver fix
- community stats in orm
- get_communities_by_author resolver added
- get_communities_all resolver fix
- reaction filter by kinds
- reaction sort enum added
- community follower roles enum added

[0.4.4]
- followers_stat removed for shout
- sqlite3 support added
- rating_stat and commented_stat fix

[0.4.3]
- cache reimplemented
- load shouts queries unified
- followers_stat

[0.4.2]
- reactions load resolvers separated for ratings (no stats) and comments
- reactions stats improved
- load_comment_ratings separate resolver

[0.4.1]
- follow/unfollow logic updated and unified with cache

[0.4.0]
- chore: version migrator synced
- feat: precache_data on start
- fix: store id list for following cache data
- fix: shouts stat filter out deleted

[0.3.5]
- cache isolated to services
- topics followers and authors cached
- redis stores lists of ids

[0.3.4]
- load_authors_by from cache

[0.3.3]
- feat: sentry integration enabled with glitchtip
- fix: reindex on update shout
- packages upgrade, isort
- separated stats queries for author and topic
- fix: feed featured filter
- fts search removed

[0.3.2]
- redis cache for what author follows
- redis cache for followers
- graphql add query: get topic followers

[0.3.1]
- enabling sentry
- long query log report added
- editor fixes
- authors links cannot be updated by update_shout anymore

[0.3.0]
- Shout.featured_at timestamp of the frontpage featuring event
- added proposal accepting logics
- schema modulized
- Shout.visibility removed

[0.2.22]
- added precommit hook
- fmt
- granian asgi

[0.2.21]
- fix: rating logix
- fix: load_top_random_shouts
- resolvers: add_stat_* refactored
- services: use google analytics
- services: minor fixes search

[0.2.20]
- services: ackee removed
- services: following manager fixed
- services: import views.json

[0.2.19]
- fix: adding 'author' role
- fix: stripping user_id in auth connector

[0.2.18]