@@ -7,6 +7,9 @@
 - reaction filter by kinds
 - reaction sort enum added
 - community follower roles enum added
+- invite status enum added
+- topic parents ids added
+- community CUDL resolvers added
 
 [0.4.4]
 - followers_stat removed for shout
